--- a/res/menu/fragment_crime_list.xml
+++ b/res/menu/fragment_crime_list.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+      xmlns:ci="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/menu_item_new_crime"
           android:icon="@drawable/ic_menu_add"
           android:title="@string/new_crime"
-          android:showAsAction="ifRoom|withText"/>
+          ci:showAsAction="ifRoom|withText"/>
 </menu>
