--- a/res/menu/fragment_crime_list.xml
+++ b/res/menu/fragment_crime_list.xml
@@ -2,7 +2,7 @@
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:ci="http://schemas.android.com/apk/res-auto">
-    <item android:id="@+id/menu_item_new_crime"
+    <item android:id="@id/menu_item_new_crime"
           android:icon="@drawable/ic_menu_add"
           android:title="@string/new_crime"
           ci:showAsAction="ifRoom|withText"/>
