--- a/res/values/ids.xml
+++ b/res/values/ids.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
     <item type="id" name="viewPager"/>
+    <item type="id" name="menu_item_new_crime"/>
+    <item type="id" name="menu_item_show_subtitle"/>
+    <item type="id" name="menu_item_delete_crime"/>
 </resources>
